Bug 1570566 - Don't block reloading during a resize event handler on Android and Nightly. r=bzbarsky

Differential Revision: https://phabricator.services.mozilla.com/D40430