dom/base/Location.cpp
@@ -737,7 +737,8 @@ nsresult Location::Reload(bool aForceget) {
   nsCOMPtr<nsPIDOMWindowOuter> window =
       docShell ? docShell->GetWindow() : nullptr;
 
-  if (window && window->IsHandlingResizeEvent()) {
+  if (StaticPrefs::dom_block_reload_from_resize_event_handler() && window &&
+      window->IsHandlingResizeEvent()) {
     // location.reload() was called on a window that is handling a
     // resize event. Sites do this since Netscape 4.x needed it, but
     // we don't, and it's a horrible experience for nothing. In stead
